@@ -1,0 +1,6 @@
+<p>
+  <b>Hospede:</b>
+  <%=h @conta.hospede.nome %>
+</p>
+
+<%= link_to 'Voltar', contas_path %>
